fix: Fix display shifting when empty

--- a/styles.css
+++ b/styles.css
@@ -32,10 +32,11 @@ body {
   font-weight: bold;
   height: 60px;
   border-radius: 8px;
-  padding: 6px;
+  padding: 0 4px;
   margin-bottom: 6px;
   display: flex;
   justify-content: flex-end;
+  align-items: center;
 }
 
 .row {
